--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -42,8 +42,8 @@
                             <h2>My Portfolio</h2>
                             <p>Made with Angular</p>
                             <div class="btnCont">
-                                <a href="" target="_blank"><button>Website</button></a>
-                                <a href="" target="_blank"><button>Repository</button></a>
+                                <a href="https://nicolasvalbuena.netlify.app" target="_blank"><button>Website</button></a>
+                                <a href="https://github.com/NValRod/MyPortfolio" target="_blank"><button>Repository</button></a>
                             </div>
                         </div>
                     </div>
