--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -161,8 +161,8 @@ footer{
 
 @media screen and (min-width: 375px) and (max-width:424px){
     .container{
-        background-position: 7em 16em;
-        height: 36em;
+        background-position: 7em 23em;
+        height: 39.5em;
         background-size: 25em;
     }
 
@@ -173,7 +173,7 @@ footer{
 
     .message{
         width:20em;
-        height: 10em;
+        height: 15em;
     }
     .email{
         width:20em;
@@ -184,6 +184,7 @@ footer{
         width: 15em;
         height: 2.5em;
         margin-top: 1em;
+        font-size: 1em;
     }
 
     .iconCont{
@@ -200,7 +201,7 @@ footer{
 @media screen and (min-width: 320px) and (max-width:374px){
     .container{
         background-position: 6em 20em;
-        height: 36em;
+        height: 39em;
         background-size: 22em;
     }
 
