--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -28,6 +28,9 @@ h1{
 }
 
 @media screen and (min-width:305px) and (max-width:480px){
+    .container{
+        min-height: 53rem;
+    }
     .subCont{
         margin-top: -7em;
     }
