--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -111,7 +111,8 @@ button{
      .container-fluid{
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
+        justify-content: center;
+        align-items: center;
         margin-left: .5em;  
     }
     .cv{
@@ -147,7 +148,8 @@ button{
      .container-fluid{
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
+        justify-content: center;
+        align-items: center;
         margin-left: -.5em;  
     }
     .cv{
@@ -182,7 +184,8 @@ button{
      .container-fluid{
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
+        justify-content: center;
+        align-items: center;
         margin-left: -.5em;  
     }
     .cv{
