--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,6 +1,6 @@
 
 .container{
-    background-image: url(/assets/bg.jpg);
+    background-image: url(/assets/bg.webp);
     background-color: rgb(33,37,41);
     background-blend-mode:soft-light;
     background-repeat: no-repeat;
