--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -4,17 +4,6 @@
             <h1 class="title">My Work</h1>
                 <div class="expCont">
                     <div class="main_cont">
-                        <img class="image" src="assets/BookingPage.png" alt="BookingPage">
-                        <div class="overlay">
-                            <h2>Booking Page</h2>
-                            <p>Made only with HTML and CSS</p>
-                            <div class="btnCont">
-                                <a href="https://bpage.netlify.app/" target="_blank"><button >Website</button></a>
-                                <a href="https://github.com/NValRod/Booking-page" target="_blank"><button>Repository</button></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="main_cont">
                         <img class="image" src="assets/W3WEB.png" alt="W3-WEB">
                         <div class="overlay">
                             <h2>W3 WEB</h2>
@@ -22,6 +11,17 @@
                             <div class="btnCont">
                                 <a href="https://w3web.netlify.app/" target="_blank"><button>Website</button></a>
                                 <a href="https://github.com/NValRod/W3WEB" target="_blank"><button>Repository</button></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="main_cont">
+                        <img class="image" src="assets/PokemonIndex.png" alt="W3-WEB">
+                        <div class="overlay">
+                            <h2>Pokemon I-ndex</h2>
+                            <p>Made with React Js</p>
+                            <div class="btnCont">
+                                <a href="https://pokemoni-ndex.netlify.app/" target="_blank"><button>Website</button></a>
+                                <a href="https://github.com/NValRod/Pokemon-i-ndex" target="_blank"><button>Repository</button></a>
                             </div>
                         </div>
                     </div>
@@ -37,13 +37,13 @@
                         </div>
                     </div>
                     <div class="main_cont">
-                        <img class="image" src="assets/Portfolio.png" alt="Portfolio">
+                        <img class="image" src="assets/LogMedc.png" alt="LogIn">
                         <div class="overlay">
-                            <h2>My Portfolio</h2>
+                            <h2>LogIn</h2>
                             <p>Made with Angular</p>
                             <div class="btnCont">
-                                <a href="https://nicolasvalbuena.netlify.app" target="_blank"><button>Website</button></a>
-                                <a href="https://github.com/NValRod/MyPortfolio" target="_blank"><button>Repository</button></a>
+                                <a href="https://loginmedc.netlify.app/" target="_blank"><button>Website</button></a>
+                                <a href="https://github.com/NValRod/LogInMedc" target="_blank"><button>Repository</button></a>
                             </div>
                         </div>
                     </div>
