--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -20,7 +20,7 @@
 }
 
 .formCont{
-    margin-top: 6em;
+    margin-top: 2em;
     margin-left: 5em;
 }
 
@@ -39,6 +39,9 @@
     outline-color: var(--azul);
 }
 
+form h1{
+    margin: .5em 0;
+}
 button{
     font-weight: 600;
     background-color: var(--amarillo);
@@ -85,7 +88,7 @@ footer{
     background-color: var(--vino);
     max-width: 100%;
     width:100%;
-    height: 4em;
+    height: 2em;
     justify-content: center;
     align-items: center;
     color: var(--blanco);
