--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<footer>Copyright © 2021 <br> All Rights Reserved</footer>
+<footer>Copyright © 2021</footer>
 
 
 <!-- Modal -->
