--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -2,9 +2,9 @@
     <div class="textCont">
         <h1 class="title">About Me</h1>
         <p class="pg">    
-          Im a proactive person, I love tech, Im energetic, I work hard, Im creative, Im passionate about learning, and like to be challenge and do what everyone else says that I cant.
-          My experience with development software is primarily JavaScript and TypeScrip, Im comfortable using frameworks such as React Js and Angular. <br>
-          Im also interested in backend, Im currently studying Ruby on rails, and Sinatra.
+          Im a proactive person, I love tech, Im energetic, I work hard, Im creative, Im passionate about learning, and I like to be challenge and do what everyone else says that I can't.
+          My experience with development software is primarily JavaScript and TypeScrip, Im comfortable using frameworks such as React Js and Angular, in the past I use databases in postgres and MySQL<br>
+          Im also interested in backend, Im currently learning Ruby on rails, and Sinatra.
         </p>
 
         <div>
