--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,6 +2,6 @@
     <div class="subCont">
         <h2>Hi!</h2> 
         <h1>I'm Nicolas Valbuena</h1>
-        <h2>Frontend developer</h2>
+        <h2>Software developer</h2>
     </div>
 </div>
