--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -15,7 +15,7 @@
                         </div>
                     </div>
                     <div class="main_cont">
-                        <img class="image" src="assets/PokemonIndex.png" alt="W3-WEB">
+                        <img class="image" src="assets/pokemonindex.png" alt="Pokemon Index">
                         <div class="overlay">
                             <h2>Pokemon I-ndex</h2>
                             <p>Made with React Js</p>
