--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -57,6 +57,10 @@ img{
     margin-right: 5em;
 }
 
+li::marker{
+    font-size: 1.5em;
+    color: var(--azul);
+}
 /* Laptops screen */
 @media screen and (min-width:780px) and (max-width:1024px){
     .container{
