--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -29,7 +29,7 @@
     </div>
     <div>
         <h1 class="title titleUp">My Skills</h1>
-        <ngb-carousel *ngIf="images" class="logoCont">
+        - <ngb-carousel *ngIf="images" class="logoCont">
             <ng-template ngbSlide>
               <div>
                 <img [src]="images[0]" alt="Logo HMTL" matTooltip="HTML" matTooltipPosition="above" matTooltipClass="custom-tool">
@@ -85,6 +85,10 @@
               <img [src]="images[10]" class="logo" alt="Logo TypeScript" matTooltip="TypeScript" matTooltipPosition="above" matTooltipClass="custom-tool">
             </div>
           </ng-template>
-        </ngb-carousel>
+        </ngb-carousel> --
     </div>
 </div>
+
+
+
+
