--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -6,23 +6,23 @@
     background-color: var(--blanco);
     padding-top: 4em;
     background-image: url('/assets/Hero2.png');
-    background-position: 33em 6em;
-    background-size: 59em;
+    background-position: 36em 9em;
+    background-size: 51em;
     background-repeat: no-repeat;
+    background-attachment:fixed;
 }
 
+
 .logoCont{
-    background-color: var(--azul);
     border-radius: 24px;
     width: 35em;
     height: 17em;
     padding-top: 1em;
     margin-left: 2em;
-    margin-top: 5em;
+    margin-top: 4em;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 5px solid var(--gris);
 }
 
 img{
@@ -34,7 +34,7 @@ img{
 }
 
 .logo{
-    border: 1em solid white;
+    border: .8em solid white;
 }
 
 .title{
@@ -61,12 +61,14 @@ li::marker{
     font-size: 1.5em;
     color: var(--azul);
 }
+
 /* Laptops screen */
 @media screen and (min-width:780px) and (max-width:1024px){
     .container{
         background-position-y: 10em;
         background-position-x: 24em;
-        background-size: 50em;
+        background-size: 50em; 
+        background-attachment:inherit;
     }
 
     .pg{
@@ -87,16 +89,18 @@ li::marker{
         flex-direction: column;
         background-position-y: 33em;
         background-position-x: 4em;
+        background-attachment:inherit;
         background-size: 45em;
         height: 65.5rem;
     }
 
     .logoCont{
-        margin: 4em auto;
+        margin: 4em 7em;
     }
 
     .titleUp{
         margin-top: 0em;
+        margin-left: 1em;
     }
 
     .pg{
@@ -116,19 +120,21 @@ li::marker{
         display: flex;
         flex-direction: column;
         background-position-y: 43.5em;
-        background-position-x: -3.5em;
-        background-size: 40em;
+        background-position-x: -0.5em;
+        background-attachment:inherit;
+        background-size: 34em;
         height: 66.5rem;
     }
 
     .logoCont{
-        width: 20em;
+        width: 24em;
         height: 14em;
         padding-top: 1em;
     }
     .titleUp{
         margin-bottom: -2.5em;
         margin-top: 0;
+        margin-left: 1em;
     }
 
     .pg{
@@ -142,9 +148,9 @@ li::marker{
     }
 
     img{
-        width: 10em;
+        width: 12em;
         height: 12em;
-        margin: auto 5em;
+        margin: auto 6em;
         background-color: white;
         border-radius: 100%;
     }
@@ -157,6 +163,7 @@ li::marker{
         flex-direction: column;
         background-position-y: 43.5em;
         background-position-x: -2em;
+        background-attachment:inherit;
         background-size: 34em;
         height: 67.5rem;
     }
@@ -232,6 +239,5 @@ li::marker{
         margin-right: 0em;
         margin-left: 0em;
     }
-
-
 }
+
