--- a/src/styles.css
+++ b/src/styles.css
@@ -29,4 +29,8 @@ body{
   background-color:rgba(40, 36, 44, 0.71); 
 }
 
-
+.carousel-control-prev-icon,.carousel-control-next-icon{
+  background-color: var(--azul);
+  border-radius: 8px;
+  background-size: 1.2em;
+}
