--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -2,9 +2,10 @@
     <div class="textCont">
         <h1 class="title">About Me</h1>
         <p class="pg">    
-          Im a proactive person, I love tech, Im energetic, I work hard, Im creative, Im passionate about learning, and I like to be challenge and do what everyone else says that I can't.
-          My experience with development software is primarily JavaScript and TypeScrip, Im comfortable using frameworks such as React Js and Angular, in the past I use databases in postgres and MySQL<br>
-          Im also interested in backend, Im currently learning Ruby on rails, and Sinatra.
+          Im a proactive person, I love tech, Im energetic, I work hard, Im passionate about learning, and I like to be challenge and do what everyone else says that I can't.
+          My experience with development software is primarily JavaScript and TypeScrip, Im comfortable using frameworks such as React and Angular, I used databases like mySQL and Postgres.
+          <br>
+          Im also interested in backend I love Ruby on rails.
         </p>
 
         <div>
@@ -14,9 +15,6 @@
                     I love sports, my favorites are, Tennis, MMA, Basketball and Table tennis.
                 <li>
                     My hobbies are, playing chess, read, playing table tennis, going out with my dog.
-                </li>
-                <li>
-                    I love history, so I watched documentarys, and also movies that are based on history, I love old ganster and western films.
                 </li>
                 <li>
                     My favorite movie is Goodfellas.
